--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -782,6 +782,7 @@ input, select, textarea {
 		list-style: none;
 		margin-left: -1rem;
 		padding-left: 0;
+		justify-content: center;
 	}
 
 		ul.actions li {
@@ -1659,3 +1660,21 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
+		body.responsive-video {
+			position: relative;
+			padding-bottom: 56.25%; /* proporción de aspecto 16:9 /
+			padding-top: 30px; / para evitar que el contenido se superponga a la parte superior */
+			height: 0;
+			overflow: hidden;
+			}
+			
+		body.responsive-video iframe {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			}
+
+			
