--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1161,7 +1161,8 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/1.jpg");
+			/*background-image: url("../../images/1.jpg");*/
+			background-image: url("../../images/test.jpg");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -1677,4 +1678,6 @@ input, select, textarea {
 			width: 100%;
 			height: 100%;
 		  }
+		  
+
 		  
